fix text wrap on past issues dropdown

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -86,6 +86,7 @@
   font-variant: small-caps;
   margin-right: 2rem;
   display: block;
+  white-space: nowrap;
 
   &.active {
     font-weight: 600;
